force-app/main/default/objects/Payment_Plan__c/Payment_Plan__c.object-meta.xml
<CustomObject>
    <label>Payment Plan</label>
    <nameField>
        <label>Payment Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>