force-app/main/default/objects/Payment_Plan__c/fields/Charge10Total__c.field-meta.xml
<CustomField>
    <fullName>Charge10Total__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Charge 10 Total %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>