force-app/main/default/objects/Payment_Plan__c/fields/From_Floor__c.field-meta.xml
<CustomField>
    <fullName>From_Floor__c</fullName>
    <label>From Floor</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>