force-app/main/default/objects/Payment_Plan__c/fields/Is_Access_Restricted__c.field-meta.xml
<CustomField>
    <fullName>Is_Access_Restricted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Access Restricted</label>
    <type>Checkbox</type>
</CustomField>