force-app/main/default/objects/Payment_Plan__c/fields/Is_Standard_Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Is_Standard_Payment_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Standard Payment Plan</label>
    <type>Checkbox</type>
</CustomField>