force-app/main/default/objects/Payment_Plan__c/fields/Max_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Max_Purchase_Price__c</fullName>
    <label>Max Purchase Price</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>