force-app/main/default/objects/Payment_Plan__c/fields/No_GST_on_Token__c.field-meta.xml
<CustomField>
    <fullName>No_GST_on_Token__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No GST on Token</label>
    <type>Checkbox</type>
</CustomField>