force-app/main/default/objects/Payment_Plan__c/fields/NoofMilestones__c.field-meta.xml
<CustomField>
    <fullName>NoofMilestones__c</fullName>
    <label>No of Milestones</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>