force-app/main/default/objects/Payment_Plan__c/fields/Subvention_Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Subvention_Payment_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subvention Payment Plan</label>
    <type>Checkbox</type>
</CustomField>